# majiang-league-com

./: README.md  deploy-backend.sh  deploy-frontend.sh
backend/: Cargo.toml  Dockerfile  openapi.json  setup-db.sh
backend/migrations/: 0001_create_tables.sql  0001_players.sql  0002_initial_data.sql  0002_tournament.sql  0003_setup_players.sql  0004_setup_tournaments.sql
backend/src/: main.rs
frontend/: .gitignore  .prettierrc  index.html  package.json  pnpm-lock.yaml  tsconfig.json
frontend/src/: main.ts
frontend/src/app/: App.vue  main.css
frontend/src/app/assets/: main.css
frontend/src/app/router/: index.ts
frontend/src/entities/player/api/: index.ts
frontend/src/entities/player/model/: types.ts
frontend/src/entities/tournament/api/: index.ts
frontend/src/entities/tournament/model/: types.ts
frontend/src/pages/player-list/: index.ts
frontend/src/pages/player-list/ui/: player-list-page.vue
frontend/src/pages/player/ui/: player-page.vue
frontend/src/pages/players/: index.ts
frontend/src/pages/players/ui/: player-page.vue
frontend/src/pages/results/: index.ts
frontend/src/pages/results/ui/: result-page.vue
frontend/src/pages/score-entry/: index.ts
frontend/src/pages/tournament/: index.ts
frontend/src/pages/tournament-list/: index.ts
frontend/src/shared/api/: base-api.ts  index.ts  schema.d.ts
frontend/src/shared/ui/layouts/: index.ts  (+1 more)
frontend/src/widgets/player-detail/: index.ts
frontend/src/widgets/player-list/: index.ts
frontend/src/widgets/tournament-detail/: index.ts
frontend/src/widgets/tournament-list/: index.ts
(+15 files in other folders)
