[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing-subscriber = "0.3.19"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-native-tls"] }
utoipa = "5.3.1"
utoipa-swagger-ui = { version = "9", features = ["axum"] }
